Upgrade project to latest SDK (#10)
* Upgrade project to latest SDK

* Fix problems with upgrade

* Upgrade to 1.0.0

* Rewrite scenarios to scripts

* Update version in some files

* Run only market setup script in test phase

* Add a waiting logic for triggers

* Add Finder class

* simplify finder

* Implement tailing

* refactor by introducing private method

* license

* format

* Adjust number of DataStream contracts in tests because of some archive

* Revert "Adjust number of DataStream contracts in tests because of some archive"

This reverts commit 47c8b76794f840e2c175931eb9b71b4788c5e66a.

* Adjust number of DataStream contracts assertion in tests

* format

* Fix names in test

* experiment with xlarge circleci resource class

* Use volatile for concurrent access

Co-Authored-By: Tamás Kálcza <tamas.kalcza@digitalasset.com>

Co-authored-by: Automatic SDK Updater <refapp-machine-da@digitalasset.com>
Co-authored-by: Gabor Hosszu <gabor@digitalasset.com>
Co-authored-by: Richard Kapolnai <richard.kapolnai@digitalasset.com>
Co-authored-by: Tamás Kálcza <tamas.kalcza@digitalasset.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ executors:
   mvn-executor:
     docker:
       - image: circleci/openjdk:11.0-jdk
-    resource_class: large
+    resource_class: xlarge
   daml-executor:
     docker:
       - image: circleci/openjdk:11.0-jdk
@@ -136,8 +136,9 @@ jobs:
           command: |
             export PATH=${HOME}/.daml/bin:${PATH}
             daml build -o target/know-your-customer.dar
-            daml test --junit target/daml-test-reports/daml-test.xml
-            daml test-script --dar target/know-your-customer.dar
+            ./scripts/runDamlScript.sh \
+              "target/know-your-customer.dar" \
+              "DA.RefApps.KnowYourCustomer.MarketSetupScript:setupMarketForSandbox"
       - save_cache:
           paths:
             - ~/.daml
@@ -163,20 +164,20 @@ workflows:
   build_and_test:
     jobs:
       - daml_test:
-          daml_sdk_version: "0.13.54"
+          daml_sdk_version: "1.0.0"
       - mvn_test:
-          daml_sdk_version: "0.13.54"
+          daml_sdk_version: "1.0.0"
       - blackduck_check:
-          daml_sdk_version: "0.13.54"
+          daml_sdk_version: "1.0.0"
           context: blackduck
   build_and_release:
     jobs:
       - daml_test:
           <<: *only-release-tags
-          daml_sdk_version: "0.13.54"
+          daml_sdk_version: "1.0.0"
       - mvn_test:
           <<: *only-release-tags
-          daml_sdk_version: "0.13.54"
+          daml_sdk_version: "1.0.0"
           context: blackduck
       - github_release:
           context: github-refapp-repo-context
