Run Maven tests in refapps context.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -169,6 +169,7 @@ workflows:
           daml_sdk_version: "1.0.1"
       - mvn_test:
           daml_sdk_version: "1.0.1"
+          context: refapps
       - blackduck_check:
           daml_sdk_version: "1.0.1"
           context: blackduck
