--- a/.dlint.yaml
+++ b/.dlint.yaml
@@ -1,1 +1,6 @@
+#
+# Copyright (c) 2020, Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
+# SPDX-License-Identifier: Apache-2.0
+#
+
 - ignore: {name: Redundant pure }
