--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -166,21 +166,21 @@ workflows:
   build_and_test:
     jobs:
       - daml_test:
-          daml_sdk_version: "1.5.0-snapshot.20200907.5151.0.eb68e680"
+          daml_sdk_version: "1.5.0"
       - mvn_test:
-          daml_sdk_version: "1.5.0-snapshot.20200907.5151.0.eb68e680"
+          daml_sdk_version: "1.5.0"
           context: refapps
       - blackduck_check:
-          daml_sdk_version: "1.5.0-snapshot.20200907.5151.0.eb68e680"
+          daml_sdk_version: "1.5.0"
           context: blackduck
   build_and_release:
     jobs:
       - daml_test:
           <<: *only-release-tags
-          daml_sdk_version: "1.5.0-snapshot.20200907.5151.0.eb68e680"
+          daml_sdk_version: "1.5.0"
       - mvn_test:
           <<: *only-release-tags
-          daml_sdk_version: "1.5.0-snapshot.20200907.5151.0.eb68e680"
+          daml_sdk_version: "1.5.0"
           context: blackduck
       - github_release:
           context: github-refapp-repo-context
