--- a/Dockerfile-triggers
+++ b/Dockerfile-triggers
@@ -6,6 +6,11 @@ ARG sdk_vsn=1.5.0
 
 FROM digitalasset/daml-sdk:${sdk_vsn}
 
+USER root
+RUN apt-get update || apt-get update
+RUN apt-get -y install netcat-openbsd
+USER daml
+
 WORKDIR /home/daml
 
 COPY target/know-your-customer.dar /home/daml/
