--- a/Dockerfile-bots
+++ b/Dockerfile-bots
@@ -2,7 +2,9 @@
 # Copyright (c) 2020, Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
 #
 
-FROM openjdk:8-jre-alpine
+ARG sdk_vsn=1.5.0
+
+FROM digitalasset/daml-sdk:${sdk_vsn}
 
 WORKDIR /home/sdk
 
