--- a/triggers/daml.yaml
+++ b/triggers/daml.yaml
@@ -4,7 +4,7 @@
 #
 
 sdk-version: 1.8.0
-name: know-your-customer
+name: know-your-customer-triggers
 source: src/main/daml
 parties:
   - CIP_Provider
@@ -22,6 +22,8 @@ dependencies:
   - daml-prim
   - daml-stdlib
   - daml-script
+  - daml-trigger
+  - ../target/know-your-customer.dar
 build-options:
   - '--ghc-option'
   - '-Werror'
