simplify pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -86,40 +86,19 @@
                 <version>3.0.0</version>
                 <executions>
                     <execution>
-                        <id>daml-model-build</id>
+                        <id>daml-build</id>
                         <phase>generate-sources</phase>
                         <goals>
                             <goal>exec</goal>
                         </goals>
                         <configuration>
-                            <executable>daml</executable>
+                            <executable>make</executable>
                             <arguments>
-                                <argument>build</argument>
-                                <argument>--project-root</argument>
-                                <argument>${daml.model.projectDir}</argument>
-                                <argument>-o</argument>
-                                <argument>${daml.model.dar}</argument>
+                                <argument>build-dars</argument>
                             </arguments>
                         </configuration>
                     </execution>
-                    <execution>
-                        <id>daml-triggers-build</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>daml</executable>
-                            <arguments>
-                                <argument>build</argument>
-                                <argument>--project-root</argument>
-                                <argument>${daml.triggers.projectDir}</argument>
-                                <argument>-o</argument>
-                                <argument>${daml.triggers.dar}</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                    <execution>
+                   <execution>
                         <id>daml-codegen</id>
                         <phase>generate-sources</phase>
                         <goals>
