--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -185,4 +185,6 @@ workflows:
           context: refapps
       - blackduck_check:
           daml_sdk_version: "1.9.0"
-          context: blackduck
+          context:
+            - blackduck
+            - refapps
