--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <packaging>jar</packaging>
     <version>0.0.1-SNAPSHOT</version>
     <organization>
-        <name>com.daml.product</name>
+        <name>com.daml</name>
     </organization>
 
     <properties>
