add flake8 py lint to CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,14 @@ commands:
             curl -sSL https://get.daml.com/ | sh /dev/stdin << parameters.version >>
             # idea from https://circleci.com/docs/2.0/env-vars/
             >> $BASH_ENV echo 'export PATH="$HOME/.daml/bin:$PATH"'
+  install_flake8:
+    description: "Install flake8"
+    steps:
+      - run:
+          name: Install flake8
+          command: |
+            sudo apt-get update || sudo apt-get update
+            sudo apt-get install flake8
   slack_notification:
     description: "Notify about failure on Slack"
     steps:
@@ -81,6 +89,11 @@ jobs:
             - m2
       - install_sdk:
           version: << parameters.daml_sdk_version >>
+      - install_flake8
+      - run:
+          name: Python flake8
+          command: |
+            flake8 --max-line-length=120 scripts/*.py
       - run:
           name: Integration tests
           command: |
