--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,6 +100,11 @@ jobs:
           command: |
             flake8 --max-line-length=120 scripts/*.py
       - run:
+          name: Pipenv install
+          working_directory: scripts
+          command: |
+            pipenv install
+      - run:
           name: Pipenv check
           working_directory: scripts
           command: |
