--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,7 @@ jobs:
           path: target/daml-test-reports
       - store_artifacts:
           path: target/daml-test-reports
-      - slack_notification
+      #- slack_notification
 
   integration_test:
     parameters:
@@ -147,7 +147,7 @@ jobs:
             - "*.dar"
             - "lib"
             - "NOTICE"
-      - slack_notification
+      #- slack_notification
 
   blackduck_check:
     parameters:
@@ -192,7 +192,7 @@ jobs:
           root: .
           paths:
             - "NOTICE"
-      - slack_notification
+      #- slack_notification
 
 workflows:
   version: 2
